fixed spacing on boxes

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -30,6 +30,7 @@
     .box1{
         background-color: @accent-color;
         .box();
+        text-align: left;
 
         @media @tablet {
             width: 48%;
@@ -59,6 +60,7 @@
         box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2), 0 8px 26px 0 rgba(0, 0, 0, 0.33);
         .mixin();
         .mixin2();
+        text-align: left;
     }
 
 
@@ -71,6 +73,7 @@
             .flexbox-around();
             .btn-about();
         }
+
         .btn-2:hover{
             color: @main-color;
             background-color: @second-color;
